[package]
name = "libp2p-kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "tls", "kad", "identify", "request-response", "cbor", "tokio", "dns", "noise", "yamux", "macros"] }
serde = { version = "1.0.192", features = ["derive"] } 
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.1"
log = "0.4.20"